Added get object by id endpoint
